<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".localizacion">

    <TextView android:text="@string/posicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/posicionact"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="25sp"/>

    <TextView android:text="@string/latitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/latitud1"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="25sp"/>
    <TextView android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/latitud"
        android:textStyle="bold"
        android:textColor="#336600"
        android:textSize="25sp"/>

    <TextView android:text="@string/longitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/longitud1"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="25sp"/>
    <TextView android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/longitud"
        android:textStyle="bold"
        android:textColor="#336600"
        android:textSize="25sp"/>

    <TextView android:text="@string/presicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/presicion1"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="25sp"/>
    <TextView android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/presicion"
        android:textStyle="bold"
        android:textColor="#336600"
        android:textSize="25sp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button android:id="@+id/actualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activar"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <Button android:id="@+id/desactivar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/desactivar"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"/>
</LinearLayout>

    <TextView android:id="@+id/estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estadopro"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="25sp"/>

    <TextView android:id="@+id/estadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#336600"
        android:textSize="25sp"/>


</LinearLayout>
